Makefile: change copyright etc...

--- a/lang/javascript/jerryscript/Makefile
+++ b/lang/javascript/jerryscript/Makefile
@@ -1,10 +1,5 @@
-# Copyright (C) [2013]
-#
-# Author: Victor Perron <victor@iso3103.net>
-#
-# This is free software, licensed under the GNU General Public License v2.
-# See /LICENSE for more information.
-#
+# License: GNU General Public License v2.
+
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=jerryscript
@@ -16,8 +11,6 @@ PKG_SOURCE_VERSION:=HEAD
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
-
-PKG_MAINTAINER:=Benjamin Henrion <zoobab@gmail.com>
 
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/cmake.mk
