Use musl-libc (not jerrylibc), do not strip, use only release.linux-cp_minimal

--- a/lang/javascript/jerryscript/Makefile
+++ b/lang/javascript/jerryscript/Makefile
@@ -1,3 +1,10 @@
+# Copyright (C) [2013]
+#
+# Author: Victor Perron <victor@iso3103.net>
+#
+# This is free software, licensed under the GNU General Public License v2.
+# See /LICENSE for more information.
+#
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=jerryscript
@@ -5,31 +12,46 @@ PKG_VERSION:=master
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/zoobab/jerryscript.git
 PKG_SOURCE:=$(PKG_NAME).tar.gz
-PKG_SOURCE_VERSION:=HEAD
+#PKG_SOURCE_VERSION:=HEAD
+PKG_SOURCE_VERSION:=b2f3ec225e931e5b2ddac6a249626ffce8fdf045
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
+
+PKG_MAINTAINER:=Benjamin Henrion <zoobab@gmail.com>
+
+PKG_INSTALL:=0
 
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/cmake.mk
 
 #MAKE_FLAGS+=VERBOSE=1
+PKG_BUILD_PARALLEL:=1
+
+TARGET_CFLAGS:=$(filter-out -Werror, $(TARGET_CFLAGS))
+
+CMAKE_OPTIONS+=-DUSE_COMPILER_DEFAULT_LIBC=YES -DPLATFORM=OPENWRT -DSTRIP_RELEASE_BINARY=NO
 
 define Package/jerryscript
-    MAINTAINER:=zoobab@gmail.com
-    TITLE:=jerryscript
-    SECTION:=lang
-    SUBMENU:=Javascript
-    CATEGORY:=Languages
+  MAINTAINER:=zoobab@gmail.com
+  TITLE:=jerryscript
+  SECTION:=lang
+  SUBMENU:=Javascript
+  CATEGORY:=Languages
 endef
 
 define Package/jerryscript/description
 	Ultra-lightweight JavaScript engine for Internet of Things
 endef
 
+define Build/Install
+	$(INSTALL_DIR) $(PKG_INSTALL_DIR)/usr/bin
+	$(CP) $(PKG_BUILD_DIR)/release.linux-cp_minimal $(PKG_INSTALL_DIR)/usr/bin/jerryscript
+endef
+
 define Package/jerryscript/install
 	$(INSTALL_DIR) $(1)/usr/bin
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/release.linux-cp_minimal $(1)/usr/bin
+	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/* $(1)/usr/bin/
 endef
 
 $(eval $(call BuildPackage,jerryscript))
