--- a/lang/javascript/jerryscript/Makefile
+++ b/lang/javascript/jerryscript/Makefile
@@ -14,20 +14,19 @@ PKG_SOURCE_VERSION:=b2f3ec225e931e5b2ddac6a249626ffce8fdf045
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
-
 PKG_MAINTAINER:=Benjamin Henrion <zoobab@gmail.com>
-
+PKG_LICENSE=WTFPL
 PKG_INSTALL:=0
+PKG_BUILD_PARALLEL:=1
 
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/cmake.mk
 
-#MAKE_FLAGS+=VERBOSE=1
-PKG_BUILD_PARALLEL:=1
-
 TARGET_CFLAGS:=$(filter-out -Werror, $(TARGET_CFLAGS))
 
-CMAKE_OPTIONS+=-DUSE_COMPILER_DEFAULT_LIBC=YES -DPLATFORM=OPENWRT -DSTRIP_RELEASE_BINARY=NO
+# don't strip for now, there is an error where cmake does not find the -strip from the toolchain
+CMAKE_OPTIONS+=-DUSE_COMPILER_DEFAULT_LIBC=YES -DSTRIP_RELEASE_BINARY=NO
+PKG_MAKE_ARGS+=release.linux-cp_minimal
 
 define Package/jerryscript
   MAINTAINER:=zoobab@gmail.com
@@ -39,6 +38,10 @@ endef
 
 define Package/jerryscript/description
 	Ultra-lightweight JavaScript engine for Internet of Things
+endef
+
+define Build/Compile
+	$(MAKE) -C $(PKG_BUILD_DIR) $(PKG_MAKE_ARGS)
 endef
 
 define Build/Install
